attempt to fix modal geometry on small screens

--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -22,7 +22,7 @@
 }
 
 .modal_form__field {
-  width: 370px;
+  width: 70%;
   height: 40px;
   padding: 0 12px 0 42px;
 
@@ -55,7 +55,7 @@
 }
 
 .modal_form__comments {
-  width: 370px;
+  width: 70%;
   box-sizing: border-box;
   resize: none;
   padding: 12px 16px;
