--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -16,8 +16,8 @@
   transition: transform 250ms $timing-function, opacity 250ms $timing-function;
 
   @media screen and (max-width: 479px) {
-    width: 100vw;
-    height: 100vh;
+    width: 80vw;
+    height: 80vh;
     padding: 30px 30px;
   }
 }
